--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-#spring.datasource.url=jdbc:mysql://springboot-database.c74hdchwx9ax.ap-northeast-2.rds.amazonaws.com:3306/noticeboard
-#spring.datasource.username=guluming
-#spring.datasource.password=sparta7b
+#spring.datasource.url=jdbc:mysql://springboot-myorderdb.c74hdchwx9ax.ap-northeast-2.rds.amazonaws.com:3306/myorders
+#spring.datasource.username=ansqjatn
+#spring.datasource.password=ansqjatn123
 #spring.jpa.hibernate.ddl-auto=update
 
 spring.h2.console.enabled=true
